--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
      Danqi
     </td>
     <td>
-     Topic TBD
+     More reasoning topics
     </td>
     <td>
     </td>
@@ -753,10 +753,10 @@
      Nov 4 (Mon)
     </td>
     <td>
-     TBD
+     Mengzhou
     </td>
     <td>
-     Topid TBD
+     Small models
     </td>
     <td>
     </td>
@@ -776,10 +776,10 @@
      Nov 6 (Wed)
     </td>
     <td>
-     Mengzhou
+     Sanjeev
     </td>
     <td>
-     Small models
+     TBD
     </td>
     <td>
     </td>
