Add slides for Oct 28

--- a/index.html
+++ b/index.html
@@ -688,10 +688,10 @@
      Oct 28 (Mon)
     </td>
     <td>
-     Danqi
+     <s>Danqi</s> Sanjeev
     </td>
     <td>
-     Mathematical reasoning
+     Mathematical reasoning <a href="lectures/lec14-Inference Time Compute.pdf">[slides]</a>
     <ul>
         <li>
             <a href="https://arxiv.org/abs/2305.20050">Let's Verify Step by Step</a>
