--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
      <s>Danqi</s> Sanjeev
     </td>
     <td>
-     Mathematical reasoning <a href="lectures/lec14-Inference Time Compute.pdf">[slides]</a>
+     LLM Reasoning 1 <a href="lectures/lec14-Inference Time Compute.pdf">[slides]</a>
     <ul>
         <li>
             <a href="https://arxiv.org/abs/2305.20050">Let's Verify Step by Step</a>
@@ -702,6 +702,9 @@
     </ul>
     </td>
     <td>
+        <li>
+            <a href="https://arxiv.org/abs/2403.04706">Common 7B Language Models Already Possess Strong Math Capabilities</a>
+        </li>
         <li>
             <a href="https://arxiv.org/abs/2312.08935">Math-Shepherd: Verify and Reinforce LLMs Step-by-step without Human Annotations</a>
         </li>
@@ -729,7 +732,12 @@
      Danqi
     </td>
     <td>
-     More reasoning topics
+     LLM Reasoning 2 <br>
+    <ul>
+    <li>
+      <a href="https://arxiv.org/abs/2408.03314">Scaling LLM Test-Time Compute Optimally can be More Effective than Scaling Model Parameters</a>
+    </li>
+    </ul>
     </td>
     <td>
     </td>
@@ -753,7 +761,7 @@
      Nov 4 (Mon)
     </td>
     <td>
-     Mengzhou
+     Mengzhou Xia
     </td>
     <td>
      Small models
