--- a/index.html
+++ b/index.html
@@ -740,7 +740,11 @@
     </ul>
     </td>
     <td>
+    <li>
+        <a href="https://arxiv.org/abs/2402.03300">DeepSeekMath: Pushing the Limits of Mathematical Reasoning in Open Language Models</a>
+    </li>
     </td>
+    <a href="https://forms.gle/pETe8Tq7B7jpJ55u7">[link]</a>
     <td>
     </td>
     <td>
