Add lec15 slides

--- a/index.html
+++ b/index.html
@@ -702,12 +702,14 @@
     </ul>
     </td>
     <td>
+        <ul>
         <li>
             <a href="https://arxiv.org/abs/2403.04706">Common 7B Language Models Already Possess Strong Math Capabilities</a>
         </li>
         <li>
             <a href="https://arxiv.org/abs/2312.08935">Math-Shepherd: Verify and Reinforce LLMs Step-by-step without Human Annotations</a>
         </li>
+        </ul>
     </td>
     <td>
       <a href="https://forms.gle/AaLvDhpf7ZENHmWy9">[link]</a>
@@ -732,7 +734,7 @@
      Danqi
     </td>
     <td>
-     LLM Reasoning 2 <br>
+     LLM Reasoning 2 <a href="lectures/lec15.pdf">[slides]</a> <br>
     <ul>
     <li>
       <a href="https://arxiv.org/abs/2408.03314">Scaling LLM Test-Time Compute Optimally can be More Effective than Scaling Model Parameters</a>
@@ -740,9 +742,20 @@
     </ul>
     </td>
     <td>
+    <ul>
+    <li>
+        <a href="https://arxiv.org/abs/2407.21787">Large Language Monkeys: Scaling Inference Compute with Repeated Sampling</a>
+    </li>
+    <li>
+        <a href="https://arxiv.org/abs/2408.00724">Inference Scaling Laws: An Empirical Analysis of Compute-Optimal Inference for Problem-Solving with Language Models</a>
+    </li>
+    <li>
+        <a href="https://arxiv.org/abs/2203.14465">STaR: Bootstrapping Reasoning With Reasoning</a>
+    </li>
     <li>
         <a href="https://arxiv.org/abs/2402.03300">DeepSeekMath: Pushing the Limits of Mathematical Reasoning in Open Language Models</a>
     </li>
+    </ul>
     </td>
     <td>
         <a href="https://forms.gle/pETe8Tq7B7jpJ55u7">[link]</a>
