--- a/index.html
+++ b/index.html
@@ -788,6 +788,7 @@
     <td>
     </td>
     <td>
+      Papers: <a href="https://arxiv.org/abs/2403.13780">Information-Theoretic Distillation for Reference-less Summarization</a><br/>
      Presenter: Ziyu Xiong<br/>
  Critics: <ul><li>Nobline Yoo</li><li>Creston A. Brooks</li></ul>
  Proponents: <ul><li>Stanley Wei</li><li>Lucy He</li></ul>
