Added debate paper for 11/6

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
     <td>
     </td>
     <td>
-      Papers: <a href="https://arxiv.org/abs/2403.13780">Information-Theoretic Distillation for Reference-less Summarization</a><br/>
+      Paper: <a href="https://arxiv.org/abs/2403.13780">Information-Theoretic Distillation for Reference-less Summarization</a><br/>
      Presenter: Ziyu Xiong<br/>
  Critics: <ul><li>Nobline Yoo</li><li>Creston A. Brooks</li></ul>
  Proponents: <ul><li>Stanley Wei</li><li>Lucy He</li></ul>
@@ -812,6 +812,7 @@
     <td>
     </td>
     <td>
+    Paper: <a href="https://arxiv.org/abs/2409.12183">To CoT or not to CoT? Chain-of-thought helps mainly on math and symbolic reasoning</a><br/>
      Presenter: Alexandre Kirchmeyer<br/>
  Critics: <ul><li>Wenzhe Li</li><li>Kylie Zhang</li></ul>
  Proponents: <ul><li>Yingqing Guo</li><li>Joie Y . Zhang</li></ul>
