--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                 <a href="https://arxiv.org/abs/2409.12181">A Controlled Study on Long Context Extension and Generalization in LLMs</a>
             </li>
             <li>
-                <a href="https://arxiv.org/abs/2404.06654">RULER: What’s the Real Context Size of Your Long-Context Language Models?</a>
+                <a href="https://arxiv.org/abs/2404.06654">RULER</a>
             </li>
             <li>
                 <a href="https://arxiv.org/abs/2309.16039">Effective Long-Context Scaling of Foundation Models</a>
@@ -631,7 +631,7 @@
                 <a href="https://arxiv.org/abs/2402.10171">Data Engineering for Scaling Language Models to 128K Context</a>
             </li>
             <li>
-                <a href="https://arxiv.org/abs/2309.17453">Efficient Streaming Language Models with Attention Sinks</a>
+                <a href="https://arxiv.org/abs/2309.17453">StreamingLLM</a>
             </li>
         </ul>
     </td>
@@ -707,7 +707,7 @@
             <a href="https://arxiv.org/abs/2403.04706">Common 7B Language Models Already Possess Strong Math Capabilities</a>
         </li>
         <li>
-            <a href="https://arxiv.org/abs/2312.08935">Math-Shepherd: Verify and Reinforce LLMs Step-by-step without Human Annotations</a>
+            <a href="https://arxiv.org/abs/2312.08935">Math-Shepherd</a>
         </li>
         </ul>
     </td>
@@ -744,16 +744,16 @@
     <td>
     <ul>
     <li>
-        <a href="https://arxiv.org/abs/2407.21787">Large Language Monkeys: Scaling Inference Compute with Repeated Sampling</a>
+        <a href="https://arxiv.org/abs/2407.21787">Large Language Monkeys</a>
     </li>
     <li>
-        <a href="https://arxiv.org/abs/2408.00724">Inference Scaling Laws: An Empirical Analysis of Compute-Optimal Inference for Problem-Solving with Language Models</a>
+        <a href="https://arxiv.org/abs/2408.00724">Inference Scaling Laws</a>
     </li>
     <li>
-        <a href="https://arxiv.org/abs/2203.14465">STaR: Bootstrapping Reasoning With Reasoning</a>
+        <a href="https://arxiv.org/abs/2203.14465">STaR</a>
     </li>
     <li>
-        <a href="https://arxiv.org/abs/2402.03300">DeepSeekMath: Pushing the Limits of Mathematical Reasoning in Open Language Models</a>
+        <a href="https://arxiv.org/abs/2402.03300">DeepSeekMath</a>
     </li>
     </ul>
     </td>
@@ -782,13 +782,25 @@
     </td>
     <td>
      Small models
+    <ul>
+    <li><a href="https://arxiv.org/abs/2310.06694">Sheared LLaMA: Accelerating Language Model Pre-training via Structured Pruning</a></li>
+    <li><a href="https://arxiv.org/abs/2408.00118">Gemma 2: Improving Open Language Models at a Practical Size</a></li>
+    </ul>
     </td>
     <td>
+    <ul>
+    <li><a href="https://arxiv.org/abs/2404.06395">MiniCPM</a></li>
+    <li><a href="https://ai.meta.com/blog/llama-3-2-connect-2024-vision-edge-mobile-devices/">Llama 3.2 blog post</a></li>
+    <li><a href="https://arxiv.org/abs/2404.14619">OpenELM</a></li>
+    <li><a href="https://nips.cc/media/neurips-2023/Slides/83968_5GxuY2z.pdf">Mojan Javaheripi: The Surprising Power of Small Language Models</a></li>
+    <li><a href="https://arxiv.org/abs/2408.11796">LLM Pruning and Distillation in Practice: The Minitron Approach</a></li>
+    </ul>
     </td>
     <td>
+    <a href="https://docs.google.com/forms/d/1QwrPejDWEJ7jX5KkCVYaYD3velY_ca3n2PFPyP-N8AU/edit">[link]</a>
     </td>
     <td>
-      Papers: <a href="https://arxiv.org/abs/2403.13780">Information-Theoretic Distillation for Reference-less Summarization</a><br/>
+      Paper: <a href="https://arxiv.org/abs/2403.13780">Information-Theoretic Distillation for Reference-less Summarization</a><br/>
      Presenter: Ziyu Xiong<br/>
  Critics: <ul><li>Nobline Yoo</li><li>Creston A. Brooks</li></ul>
  Proponents: <ul><li>Stanley Wei</li><li>Lucy He</li></ul>
@@ -802,17 +814,17 @@
      Nov 6 (Wed)
     </td>
     <td>
-     Sanjeev
+     Danqi
     </td>
     <td>
-     TBD
+     LLMs and Retrieval
     </td>
     <td>
     </td>
     <td>
     </td>
     <td>
-     Presenter: Alexandre Kirchmeyer<br/>
+     Paper: <a href="https://arxiv.org/abs/2409.12183">To CoT or not to CoT? Chain-of-thought helps mainly on math and symbolic reasoning</a> <br/>Presenter: Alexandre Kirchmeyer<br/>
  Critics: <ul><li>Wenzhe Li</li><li>Kylie Zhang</li></ul>
  Proponents: <ul><li>Yingqing Guo</li><li>Joie Y . Zhang</li></ul>
     </td>
@@ -826,10 +838,10 @@
      Nov 11 (Mon)
     </td>
     <td>
-     Guest
+         Yu Su (OSU)
     </td>
     <td>
-     Guest Lecture #1
+     LLM Agents
     </td>
     <td>
     </td>
@@ -847,10 +859,10 @@
      Nov 13 (Wed)
     </td>
     <td>
-     Guest
+     Guest lecture
     </td>
     <td>
-     Guest Lecture #2
+    TBD
     </td>
     <td>
     </td>
@@ -869,12 +881,13 @@
      Nov 18 (Mon)
     </td>
     <td>
-     Guest
+  Tri Dao
     </td>
     <td>
-     Guest Lecture #3
+     Flash Attention + Mamba
     </td>
     <td>
+      
     </td>
     <td>
     </td>
