--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
      Mengzhou Xia
     </td>
     <td>
-     Small models
+     Small models <a href="lectures/lec16.pdf">[slides]</a>
     <ul>
     <li><a href="https://arxiv.org/abs/2310.06694">Sheared LLaMA: Accelerating Language Model Pre-training via Structured Pruning</a></li>
     <li><a href="https://arxiv.org/abs/2408.00118">Gemma 2: Improving Open Language Models at a Practical Size</a></li>
