--- a/index.html
+++ b/index.html
@@ -817,11 +817,21 @@
      Danqi
     </td>
     <td>
-     LLMs and Retrieval
+     Retrieval-augmented LMs
+    <ul>
+    <li><a href="https://arxiv.org/abs/2112.04426">Improving language models by retrieving from trillions of tokens</a></li>
+    </ul>
     </td>
     <td>
+    <ul>
+    <li><a href="https://acl2023-retrieval-lm.github.io/">ACL 2023 tutorial</a></li>
+    <li><a href="https://arxiv.org/abs/2205.12674">TRIME</a></li>
+    <li><a href="https://arxiv.org/abs/2305.06983">FLARE</a></li>
+    <li><a href="https://arxiv.org/abs/2310.11511">Self-RAG</a></li>
+    </ul>
     </td>
     <td>
+    <a href="https://forms.gle/APqXyHxZ3LfB6WpAA">[link]</a>
     </td>
     <td>
      Paper: <a href="https://arxiv.org/abs/2409.12183">To CoT or not to CoT? Chain-of-thought helps mainly on math and symbolic reasoning</a> <br/>Presenter: Alexandre Kirchmeyer<br/>
