--- a/index.html
+++ b/index.html
@@ -814,21 +814,15 @@
      Nov 6 (Wed)
     </td>
     <td>
-     Danqi
+     <s>Danqi</s>
     </td>
     <td>
-     Retrieval-augmented LMs
+     <s>Retrieval-augmented LMs</s>
     <ul>
     <li><a href="https://arxiv.org/abs/2112.04426">Improving language models by retrieving from trillions of tokens</a></li>
     </ul>
     </td>
     <td>
-    <ul>
-    <li><a href="https://acl2023-retrieval-lm.github.io/">ACL 2023 tutorial</a></li>
-    <li><a href="https://arxiv.org/abs/2205.12674">TRIME</a></li>
-    <li><a href="https://arxiv.org/abs/2305.06983">FLARE</a></li>
-    <li><a href="https://arxiv.org/abs/2310.11511">Self-RAG</a></li>
-    </ul>
     </td>
     <td>
     <a href="https://forms.gle/APqXyHxZ3LfB6WpAA">[link]</a>
@@ -854,6 +848,11 @@
      LLM Agents
     </td>
     <td>
+    <ul>
+    <li><a href="https://yusu.substack.com/p/language-agents">Language agents: a critical evolutionary step of artificial intelligence</a></li>
+    <li><a href="https://arxiv.org/abs/2405.14831">HippoRAG</a></li>
+    <li><a href="https://arxiv.org/abs/2403.04746">LLMs in the Imaginarium: Tool Learning through Simulated Trial and Error</a></li>
+    </ul>
     </td>
     <td>
     </td>
@@ -869,14 +868,24 @@
      Nov 13 (Wed)
     </td>
     <td>
-     Guest lecture
+     Danqi
     </td>
     <td>
-    TBD
+    Retrieval-augmented language models
+    <ul>
+    <li><a hf="hrettps://arxiv.org/abs/2112.04426">Improving language models by retrieving from trillions of tokens</a></li>
+    </ul>
     </td>
     <td>
     </td>
     <td>
+    <ul>
+    <li><a href="https://acl2023-retrieval-lm.github.io/">ACL 2023 tutorial</a></li>
+    <li><a href="https://arxiv.org/abs/2205.12674">TRIME</a></li>
+    <li><a href="https://arxiv.org/abs/2301.12652">REPLUG</a></li>
+    <li><a href="https://arxiv.org/abs/2305.06983">FLARE</a></li>
+    <li><a href="https://arxiv.org/abs/2310.11511">Self-RAG</a></li>
+    </ul>
     </td>
     <td>
      N/A
