Add lec17 and lec18 slides

--- a/index.html
+++ b/index.html
@@ -842,10 +842,10 @@
      Nov 11 (Mon)
     </td>
     <td>
-         Yu Su (OSU)
+         Yu Su (OSU) 
     </td>
     <td>
-     Language Agents
+     Language Agents <a href="https://ysu1989.github.io/resources/language_agents_YuSu_2024.pdf">[slides]</a>
     </td>
     <td>
     <ul>
@@ -871,7 +871,7 @@
      Danqi
     </td>
     <td>
-    Retrieval-augmented language models
+    Retrieval-augmented language models <a href="lectures/lec18.pdf">[slides]</a>
     <ul>
     <li><a hf="hrettps://arxiv.org/abs/2112.04426">Improving language models by retrieving from trillions of tokens</a></li>
     </ul>
@@ -879,6 +879,8 @@
     <td>
     <ul>
     <li><a href="https://acl2023-retrieval-lm.github.io/">ACL 2023 tutorial</a></li>
+    <li><a href="https://arxiv.org/abs/2002.08909">REALM</a></li>
+    <li><a href="https://arxiv.org/abs/1911.00172">kNN-LM</a></li>
     <li><a href="https://arxiv.org/abs/2205.12674">TRIME</a></li>
     <li><a href="https://arxiv.org/abs/2301.12652">REPLUG</a></li>
     <li><a href="https://arxiv.org/abs/2305.06983">FLARE</a></li>
