Update Tri's lecture

--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
          Yu Su (OSU) 
     </td>
     <td>
-     Language Agents <a href="https://ysu1989.github.io/resources/language_agents_YuSu_2024.pdf">[slides]</a>
+     A Holistic and Critical Look at Language Agents <a href="https://ysu1989.github.io/resources/language_agents_YuSu_2024.pdf">[slides]</a>
     </td>
     <td>
     <ul>
@@ -905,10 +905,13 @@
   Tri Dao
     </td>
     <td>
-     Flash Attention + Mamba
+     Hardware-aware Algorithms for Language Modeling
     </td>
     <td>
-      
+    <ul>
+    <li><a href="https://arxiv.org/abs/2205.14135">FlashAttention</a></li>
+    <li><a href="https://arxiv.org/abs/2312.00752">Mamba</a></li>
+    </ul>
     </td>
     <td>
     </td>
