Add Saining lecture

--- a/index.html
+++ b/index.html
@@ -930,9 +930,16 @@
      Saining Xie (NYU)
     </td>
     <td>
-     Multimodal LLMs
+     Language Models Need Better Visual Grounding for Meaning and Understanding
     </td>
     <td>
+    <ul>
+    <li><a href="https://arxiv.org/abs/2310.03744">LLaVA</a></li>
+    <li><a href="https://arxiv.org/abs/2401.06209">Eyes Wide Shut? Exploring the Visual Shortcomings of Multimodal LLMs</a></li>
+    <li><a href="https://arxiv.org/abs/2406.16860">Cambrian-1</a></li>
+    <li><a href="https://arxiv.org/abs/2409.17146">Molmo and PixMo (AI2)</a></li>
+    <li><a href="https://arxiv.org/abs/2403.09611">MM1 (Apple)</a></li>
+    </ul>
     </td>
     <td>
     </td>
