Add Saining lecture

--- a/index.html
+++ b/index.html
@@ -927,10 +927,10 @@
      Nov 20 (Wed)
     </td>
     <td>
-     Saining Xie (NYU)
-    </td>
+     Saining Xie (NYU)  
     <td>
-     Language Models Need Better Visual Grounding for Meaning and Understanding
+     Language Models Need Better Visual Grounding for Meaning and Understanding <a href="lectures/lec20.pdf">[slides]</a>
+    </td>
     </td>
     <td>
     <ul>
