--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
  Proponents: <ul><li>Sreemanti Dey</li><li>Jane E. Castleman</li></ul>
     </td>
     <td>
-     <ul><li>Wenzhe Li</li><li>Mingqian Xue</li><li><s>Rafael Pastrana Jimenez</s></li></ul>
+     <ul><li>Zixuan Wang</li><li>Mingqian Xue</li></ul>
     </td>
    </tr>
    <!-- week 7 -->
@@ -723,7 +723,7 @@
  Proponents: <ul><li>Wentao Guo</li><li>Sijia Liu</li></ul>
     </td>
     <td>
-     <ul><li>Niusha Moshrefi</li><li>Zhicheng Zheng</li><li>Zixuan Wang</li></ul>
+     <ul><li>Niusha Moshrefi</li><li>Zhicheng Zheng</li><li>Wenzhe Li</li></ul>
     </td>
    </tr>
    <tr>
